--- a/index.ipynb
+++ b/index.ipynb
@@ -1114,16 +1114,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'11.Solta'"
+       "'12.Iguazu Falls'"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1131,7 @@
    "source": [
     "names_and_ranks[0] # '1. Buenos Aires'\n",
     "names_and_ranks[1] # '2. Toronto'\n",
-    "names_and_ranks[-2] # '12. Iguazu Falls'"
+    "names_and_ranks[-1] # '12. Iguazu Falls'"
    ]
   },
   {
