Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1160,7 +1160,9 @@
     }
    ],
    "source": [
-    "city_populations = [cities['Population'] for i in cities]"
+    "city_populations = []\n",
+    "for j in cities:\n",
+    "    "
    ]
   },
   {
