--- a/index.ipynb
+++ b/index.ipynb
@@ -1162,7 +1162,7 @@
    "source": [
     "city_populations = []\n",
     "for j in cities:\n",
-    "    "
+    "    city_populations.append()"
    ]
   },
   {
