--- a/index.ipynb
+++ b/index.ipynb
@@ -1161,7 +1161,7 @@
    "source": [
     "city_populations = []\n",
     "for j in cities:\n",
-    "    city_populations.append(cities[j]['Population'])"
+    "    city_populations.append(['Population'])"
    ]
   },
   {
