--- a/index.ipynb
+++ b/index.ipynb
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1165,12 +1165,23 @@
       "2732\n",
       "0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2891, 2732, 929, 559, 288, 93, 60, 44, 33, 3, 2, 0]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(city_populations[0]) # 2891\n",
     "print(city_populations[1]) # 2732\n",
-    "print(city_populations[-1]) # 0"
+    "print(city_populations[-1]) # 0\n",
+    "city_populations"
    ]
   },
   {
