Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2149,7 +2149,8 @@
    "outputs": [],
    "source": [
     "city_areas = []\n",
-    "for k in c"
+    "for k in cities:\n",
+    "    city_areas"
    ]
   },
   {
