Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2150,7 +2150,7 @@
    "source": [
     "city_areas = []\n",
     "for k in cities:\n",
-    "    city_areas"
+    "    city_areas.append(j)"
    ]
   },
   {
