--- a/index.ipynb
+++ b/index.ipynb
@@ -2144,13 +2144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "city_areas = []\n",
     "for k in cities:\n",
-    "    city_areas.append(j)"
+    "    city_areas.append(k['Area'])"
    ]
   },
   {
