Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2150,7 +2150,8 @@
    "source": [
     "city_areas = []\n",
     "for k in cities:\n",
-    "    city_areas.append(k['Area'])"
+    "    city_areas.append(k['Area'])\n",
+    "    city_"
    ]
   },
   {
